fix: overflow in Transfer, Send on lg

--- a/src/components/Wallet/Transfer/Send/Send.module.scss
+++ b/src/components/Wallet/Transfer/Send/Send.module.scss
@@ -137,6 +137,7 @@
 // Mobile
 @include lg-breakpoint {
   .wrapper {
+    overflow-y: visible;
     gap: 1.875rem;
     padding: 1.25rem;
 
